--- a/templates/index.html
+++ b/templates/index.html
@@ -28,10 +28,10 @@
         <div class="col-md-12">
           <div class="row">
             <div class="col-md-6">
-              <div class="poll-member Bocchie">
-                <h1>Bocchie&nbsp;&nbsp;</h1>
+              <div class="poll-member Bocchi">
+                <h1>Bocchi&nbsp;&nbsp;</h1>
                 <div class="percentageBarParent">
-                <div class="percentageBar" id="Bocchie"></div>
+                <div class="percentageBar" id="Bocchi"></div>
               </div>
               </div>
             </div>
